# teensy-clock

./: .gitignore  Cargo.toml  Makefile  README.md  main.cpp  rebuild-libcore.sh  thumbv7em-none-eabi.json
.cargo/: config
src/: bindings.rs  ds3234.rs  ht16k33.rs  lib.rs  main.rs  serial.rs  square_wave.rs
teensy3/: Makefile  WProgram+SPI.h  WProgram.h
teensy3-rs/: Cargo.toml  bindings.h  build.rs
